--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "react-dom": "17.0.1",
     "react-loader-spinner": "4.0.0",
     "react-router-dom": "5.2.0",
-    "recharts": "2.15.2",
-    "vercel": "41.6.1"
+    "recharts": "2.15.2"
   },
   "devDependencies": {
     "eslint-config-airbnb": "18.2.1",
